# waicare

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  roster.example.jsonl
.github/workflows/: bulletin.yml  ci.yml
config/: fiji.yaml
docs/: DPG-compliance.md  deployment.md  safety.md
examples/: README.md  illustrative_flood.json  sample_bulletin_flood.md
playbooks/: community_health_worker.yaml  families_with_children.yaml  flood_exposed_workers.yaml  general_public.yaml
prompts/: advisor.md  advisory_message.md
tests/: conftest.py  test_advisor.py  test_channels.py  test_cli.py  test_compose.py  test_config.py  test_forecast.py  test_llm.py  test_roster_state.py  test_run.py  test_trigger.py
tests/fixtures/: fiji_live.json
waicare/: __init__.py  __main__.py  advisor.py  bulletin.py  cli.py  compose.py  config.py  forecast.py  llm.py  roster.py  run.py  state.py  trigger.py
waicare/channels/: __init__.py  base.py  console.py  jsonl.py  messenger.py  sms.py  viber.py  whatsapp.py
