[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "waicare"
version = "0.1.0"
description = "Open-source AI post-flood disease (LTDD) early warning and advisory for Fiji and other flood-prone LDCs/SIDS"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "WaiCare contributors" }]
keywords = ["climate", "health", "early-warning", "flood", "leptospirosis", "dengue", "digital-public-good", "fiji"]
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
waicare = "waicare.cli:main"

[project.urls]
Homepage = "https://github.com/tom231826-svg/waicare"
Issues = "https://github.com/tom231826-svg/waicare/issues"

[tool.setuptools.packages.find]
include = ["waicare*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
